--- a/text/14_Divergence_Theorem.tex
+++ b/text/14_Divergence_Theorem.tex
@@ -1,6 +1,6 @@
 \section{The Divergence Theorem}\label{sec:div_theorem}
 
-Green's Theorem dealt with a closed curve in two dimensions.  In this section, we look at a closed surface enclosing a solid region in three dimensions.  A surface integral representing the flux through the surface can be written as a triple integral of the enclosed solid.  This is the Divergence Theorem, attributed independently to Gauss and a Russian mathematician Ostrogradsky. First, we define the divergence of a vector field.\\
+Green's Theorem dealt with a closed curve in two dimensions.  In this section, we look at a closed surface enclosing a solid region in three dimensions.  A surface integral representing the flux through the surface can be written as a triple integral of the enclosed solid.  This is the Divergence Theorem, attributed independently to Gauss and Russian mathematician Ostrogradsky. First, we define what we mean by the divergence of a vector field.\\
 
 \definition{def:divergence}{Divergence}{Let $$\vec F(x,y,z) = M(x,y,z) \: \vec i + N(x,y,z) \: \vec j + P(x,y,z) \: \vec k$$ be a vector field.  The divergence $\text{div } \vec F$ of the field $\vec F$ is given by
 $$\text{div }\vec F(x,y,z) = \dfrac{\partial M}{\partial x} + \dfrac{\partial N}{\partial y} + \dfrac{\partial P}{\partial z}$$
@@ -14,10 +14,10 @@ $$\text{div } \vec F = \nabla \cdot \vec F = \dfrac{\partial}{\partial x}(xz) + 
 The reason for the terminology \emph{divergence} relates again to fluid flow. If $\vec F(x,y,z)$ represents the velocity field of a fluid or gas, then $\text{div } \vec F (x_0,y_0,z_0)$ represents the rate of change of the fluid or gas flowing from the point $(x_0,y_0,z_0)$. That is, $\text{div } \vec F$ relates to the tendency of the fluid or gas to diverge from the point in question. If $\text{div } \vec F = 0$ for all points $(x,y,z)$, we say the fluid or gas is \textbf{incompressible}. In other words, when $\text{div } \vec F = 0$, the flow in equals the flow out.\\
 
 For example, the spin fields $$\vec F = -y \: \vec i + x \: \vec j + 0 \: \vec k \: \: \text{ and } \: \: \vec F = 0 \: \vec i - z \: \vec j + y \: \vec k$$
-have zero divergence at all points.  The first is a spin around the $z$-axis while the second is a spin around the $x$-axis.  The flow out across a surface will equal the flow into the surface. However, in a radial flow such as $$\vec F = x \: \vec i + y \: vec j + z \: \vec k$$ flow is straight out from the origin.  The divergence is $\text{div } \vec F = 1 + 1 + 1 = 3$ in this case, indicating the tendency of the fluid to diverge from any point.  The Divergence Theorem, stated next, will clarify these situations.\\
+have zero divergence at all points.  The first is a spin around the $z$-axis while the second is a spin around the $x$-axis.  The flow out across a surface will equal the flow into the surface. However, in a radial flow such as $$\vec F = x \: \vec i + y \: \vec j + z \: \vec k$$ flow is straight out from the origin.  The divergence is $\text{div } \vec F = 1 + 1 + 1 = 3$ in this case, indicating the tendency of the fluid to diverge from any point.  The Divergence Theorem, stated next, will clarify these situations.\\
 
 \theorem{thm:Div_Thm}{The Divergence Theorem}{Consider a vector field
-$$\vec F = M(x,y,z) \: \vec i + N(x,y,z) \: \vec j + P(x,y,z) \: \vec k$$ whose components $M$, $N$< and $P$ have continuous partial derivatives within a region containing a simple solid region $D$ whose boundary surface is $T$. Then the flux of $\vec F$ across $T$ equals the triple integral of the divergence $\text{div } \vec F$ inside $D$.  That is,
+$$\vec F = M(x,y,z) \: \vec i + N(x,y,z) \: \vec j + P(x,y,z) \: \vec k$$ whose component functions $M$, $N$, and $P$ have continuous partial derivatives within a region containing a simple solid region $D$ whose boundary surface is $T$. Then the flux of $\vec F$ across $T$ equals the triple integral of the divergence $\text{div } \vec F$ inside $D$.  That is,
 $$\iint_T \vec F \cdot \vec n \: dS = \iiint_D \text{div } \vec F \: dV.$$
 }\\
 
