Updated Copyright Page
I updated the copyright page on the full text.  Copyright pages for each course pdf still need to be updated.

--- a/text/copyright_page.tex
+++ b/text/copyright_page.tex
@@ -1,11 +1,63 @@
 \vspace*{\stretch{5}}
-\noindent\hskip -1in\begin{minipage}{2in}
-\includegraphics{text/by-nc} 
-\end{minipage}
-\begin{minipage}{3in}
-\noindent Copyright \copyright\ 2015 Gregory Hartman
+\noindent
+\hskip -1in
 
-Licensed to the public under Creative Commons Attribution-Noncommercial 4.0 International Public License
+\begin{minipage}{2in}
+	\includegraphics{text/by-nc-sa} 
 \end{minipage}
+
+\bigskip
+
+\begin{minipage}{3in}
+	\noindent 
+	This work is licensed to the public under Creative Commons Attribution-Noncommercial 4.0 International Public License.
+	
+	\bigskip
+	
+	\noindent
+	This work is a derivative of the following works:
+	
+\end{minipage}
+
+\bigskip
+
+\begin{minipage}{3in}
+	\noindent
+	APEX Calculus
+
+	\noindent
+	www.apexcalculus.com
+	
+	\noindent 
+	Copyright \copyright\ 2015 Gregory Hartman
+
+	Licensed to the public under Creative Commons Attribution-Noncommercial 4.0 International Public License
+\end{minipage}
+
+\bigskip
+
+\begin{minipage}{2in}
+	\includegraphics{text/by-nc} 
+\end{minipage}
+
+\bigskip
+
+\begin{minipage}{3in}
+	\noindent 
+	Calculus by Gilbert Strang
+
+    \noindent    
+    ocw.mit.edu/ans7870/resources/Strang/Edited/Calculus/Calculus.pdf
+	
+    \noindent	
+	Licensed to the public under Creative Commons Attribution-Noncommercial-ShareAlike 4.0 International Public License
+\end{minipage}
+
+\bigskip
+
+\begin{minipage}{2in}
+	\includegraphics{text/by-nc-sa} 
+\end{minipage}
+
 
 \vspace{\stretch{1}} 
