Updated 6.1 (Integration by Parts)

--- a/text/06_Int_By_Parts.tex
+++ b/text/06_Int_By_Parts.tex
@@ -63,7 +63,9 @@ The example above demonstrates how Integration by Parts works in general.  We tr
 In the example above, we chose $u=x$ and $dv=\cos x\,dx$.  Then $du=dx$ was simpler than $u$ and $v=\sin x$ is no more complicated than $dv$.  Therefore, instead of integrating $x\cos x \,dx$, we could integrate $\sin x\,dx$, which we knew how to do.
 
 A useful mnemonic for helping to determine $u$ is ``LIATE,'' where 
-\begin{center}L = \textbf{L}ogarithmic, I = \textbf{I}nverse Trig., A = \textbf{A}lgebraic (polynomials), 
+\begin{center}L = \textbf{L}ogarithmic, I = \textbf{I}nverse Trig.,
+
+A = \textbf{A}lgebraic (polynomials, roots, power functions), 
 
 T = \textbf{T}rigonometric, and E = \textbf{E}xponential.
 \end{center}
