Various Chapter 6 changes

--- a/exercises/06_03_exset_01.tex
+++ b/exercises/06_03_exset_01.tex
@@ -13,6 +13,8 @@
 \exinput{exercises/06_03_ex_14}
 \exinput{exercises/06_03_ex_15}
 \exinput{exercises/06_03_ex_16}
+\exinput{exercises/06_03_ex_16a}
+\exinput{exercises/06_03_ex_16b}
 \exinput{exercises/06_03_ex_17}
 \exinput{exercises/06_03_ex_18}
 \exinput{exercises/06_03_ex_19}
