--- a/exercises/06_04_exset_01.tex
+++ b/exercises/06_04_exset_01.tex
@@ -19,3 +19,6 @@
 \exinput{exercises/06_04_ex_23}
 \exinput{exercises/06_04_ex_24}
 \exinput{exercises/06_04_ex_25}
+\exinput{exercises/06_04_ex_30}
+\exinput{exercises/06_04_ex_31}
+\exinput{exercises/06_04_ex_32}
