--- a/text/title_page.tex
+++ b/text/title_page.tex
@@ -55,8 +55,7 @@ Mike Hilgemann \vskip 5pt
 
 Jason Schmurr \vskip 5pt
 
-Tom Gonzalez 
-}
+Tom Gonzalez}
 \normalsize
 \end{flushright}
 \end{minipage}
