--- a/exercises/06_08_exset_02.tex
+++ b/exercises/06_08_exset_02.tex
@@ -10,3 +10,4 @@
 \exinput{exercises/06_08_ex_23}
 \exinput{exercises/06_08_ex_25}
 \exinput{exercises/06_08_ex_26}
+\exinput{exercises/06_08_ex_33}
