--- a/exercises/08_02_exercises.tex
+++ b/exercises/08_02_exercises.tex
@@ -12,3 +12,4 @@
 \exsetinput{exercises/08_02_exset_02}
 \exinput{exercises/08_02_ex_24}
 \exinput{exercises/08_02_ex_23}
+\exinput{exercises/08_02_ex_47}
