--- a/exercises/08_06_exset_02.tex
+++ b/exercises/08_06_exset_02.tex
@@ -18,6 +18,7 @@
 \exinput{exercises/08_06_ex_19}
 \exinput{exercises/08_06_ex_20}
 \exinput{exercises/08_06_ex_21}
+\exinput{exercises/08_06_ex_22a}
 \exinput{exercises/08_06_ex_22}
 \exinput{exercises/08_06_ex_23}
 \exinput{exercises/08_06_ex_24}
