--- a/exercises/08_08_exercises.tex
+++ b/exercises/08_08_exercises.tex
@@ -9,3 +9,5 @@
 \exsetinput{exercises/08_08_exset_06}
 \exsetinput{exercises/08_08_exset_05}
 \exsetinput{exercises/08_08_exset_07}
+\exsetinput{exercises/08_08_exset_09}
+\exsetinput{exercises/08_08_exset_08}
