--- a/exercises/08_08_exset_05.tex
+++ b/exercises/08_08_exset_05.tex
@@ -5,5 +5,7 @@
 \exinput{exercises/08_08_ex_22}
 \exinput{exercises/08_08_ex_23}
 \exinput{exercises/08_08_ex_24}
+\exinput{exercises/08_08_ex_24b}
+\exinput{exercises/08_08_ex_24a}
 \exinput{exercises/08_08_ex_25}
 \exinput{exercises/08_08_ex_26}
