--- a/text/08_Taylor_Series.tex
+++ b/text/08_Taylor_Series.tex
@@ -1,3 +1,4 @@
+\phantom{1} \clearpage %comment out this line if he Key Idea with all of the Important Taylor Series Expansions ends up on an odd numbered page
 \section{Taylor Series}\label{sec:taylor_series}
 
 In Section \ref{sec:power_series}, we showed how certain functions can be represented by a power series function. In \ref{sec:taylor_poly}, we showed how we can approximate functions with polynomials, given that enough derivative information is available. In this section we combine these concepts: if a function $f(x)$ is infinitely differentiable, we show how to represent it with a power series function.
