Fixed typo in 8.5, and added two problems to 8.8

--- a/exercises/08_08_ex_24b.tex
+++ b/exercises/08_08_ex_24b.tex
@@ -1,4 +1,4 @@
 {$f(x) = \int e^{-x^2} dx$
 }
-{$\ds C+ \sum_{n=0}^\infty (-1)^n\frac{x^{2n+1}}{n!(2n+1)}.$
+{$\ds C+ \sum_{n=0}^\infty (-1)^n\frac{x^{2n+1}}{n!(2n+1)}$
 }
