--- a/exercises/08_08_exset_05.tex
+++ b/exercises/08_08_exset_05.tex
@@ -9,3 +9,5 @@
 \exinput{exercises/08_08_ex_24a}
 \exinput{exercises/08_08_ex_25}
 \exinput{exercises/08_08_ex_26}
+\exinput{exercises/08_08_ex_43}
+\exinput{exercises/08_08_ex_44}
